--- a/styles.css
+++ b/styles.css
@@ -47,13 +47,15 @@ p {
     background-color: #fafafa;
 }
 
-#regex-input {
+#input {
     display: block;
     margin: 20px 0;
     padding: 10px;
     font-size: 1em;
     border: 1px solid #ddd;
     border-radius: 4px;
+    height: 0.5;
+    line-height: 1;
 }
 
 #feedback {
